fixed an image stretching issue

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -81,8 +81,8 @@ button {
 
 @media only screen and (max-width: 767px) {
     .main-game-image img {
-        max-width: 75%; /* Adjust the width for phones */
-        height: 75%; /* Adjust the height for phones */
+        max-width: auto; /* Adjust the width for phones */
+        height: auto; /* Adjust the height for phones */
         border: 4px solid; /* Adjust border for phones */
     }
     button {
